SimpleBanking/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-app-deployment
  labels:
    app: banking-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banking-app
  template:
    metadata:
      labels:
        app: banking-app
    spec:
      containers:
      - name: banking-app
        image: yfhates/banking-app:latest
        ports:
        - containerPort: 8080
