SimpleBanking/service.yml
apiVersion: v1  # ✅ Add this line
kind: Service
metadata:
  name: banking-app-service
  labels:
    app: banking-app
spec:
  selector:
    app: banking-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
