SimpleBanking/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb  # ✅ Use this instead of the old annotation
  rules:
    - host: ameydeshmukh.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banking-app-service
                port:
                  number: 80
